// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput is disabled 1`] = `
<div
  class="root disabled"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input disabled"
        disabled=""
        value=""
      />
    </div>
  </span>
</div>
`;

exports[`NumericInput is readOnly 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input"
        readonly=""
        value=""
      />
    </div>
  </span>
</div>
`;

exports[`NumericInput renders correctly 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input"
        value=""
      />
    </div>
  </span>
</div>
`;

exports[`NumericInput renders with a value 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input"
        value="555.333"
      />
    </div>
  </span>
</div>
`;

exports[`NumericInput renders with an error 1`] = `
<div
  class="root errored"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input errored"
        value=""
      />
    </div>
  </span>
</div>
`;

exports[`NumericInput renders with placeholder 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="input"
        placeholder="0.0000"
        value=""
      />
    </div>
  </span>
</div>
`;
